# FedSense-Federated-Sensor-Network

./: README.md  pyproject.toml
examples/: basic_simulation.py
src/: cli.py
src/core/: models.py  patterns.py  privacy.py  sensor.py
src/network/: federation.py
src/visualization/: console.py  plotter.py
