[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-sensor-network"
version = "0.1.0"
authors = [
  { name = "Michael La Rosa", email = "hello@mlarosa.dev" },
]
description = "A framework for privacy-preserving federated learning in sensor networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "torch>=1.9.0",
    "rich>=10.0.0",
    "click>=8.0.0"
]



[project.scripts]
fedsense = "fedsense.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fedsense"]